# adventofcode-cpp

./: .gitignore  CMakeLists.txt  README.md  aoc.cpp  today.cpp  today.h
2023/day1/: README.md  ex2023d1.cpp  ex2023d1.h
2023/day2/: README.md  ex2023d2.cpp  ex2023d2.h
2023/day3/: README.md  ex2023d3.cpp  ex2023d3.h
core/: CMakeLists.txt  exercise.h  exercisefactory.cpp  exercisefactory.h
utils/: CMakeLists.txt  input.cpp  input.h
